# selkies-gstreamer

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.example  Dockerfile.runtime  Dockerfile.test  README.md  cloudbuild.yaml  docker-compose.yaml  docker-compose.yml  local_debian_build.sh  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  web.py
.devcontainer/: Dockerfile
.devcontainer/features/desktop-selkies/src/: devcontainer-feature.json  install-desktop-environment.sh  install.sh  start-selkies.sh  start-turnserver.sh
.devcontainer/focal-fluxbox/: devcontainer.json
.devcontainer/focal-xfce/: devcontainer.json
.devcontainer/jammy-fluxbox/: devcontainer.json
.devcontainer/jammy-xfce/: devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md  enhancement_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/actions/build_and_publish_image/: action.yaml
.github/workflows/: build_and_deploy_pages.yaml  build_and_publish_all_images.yaml  build_and_publish_changed_images.yaml  build_and_publish_documentation.yaml  build_and_publish_release.yaml  build_changed_images.yaml  devcontainer_feature_release.yaml  devcontainer_feature_validate.yaml  publish_artifacts_test.yaml  publish_release.yaml
addons/: cloudbuild.yaml
addons/conda/: Dockerfile
addons/coturn/: Dockerfile  detect_external_ip.sh  entrypoint.sh
addons/coturn-web/: Dockerfile  entrypoint.sh  go.mod  go.sum  informers.go  main.go  mig_disco.go
addons/example/: Dockerfile  entrypoint.sh  selkies-gstreamer-entrypoint.sh  supervisord.conf  xorg.conf
addons/gst-web/: .dockerignore  Dockerfile  entrypoint.sh  install.sh
addons/gst-web-core/: .gitignore  README.md  index.html  package.json  selkies-core.js  vite.config.js
addons/gst-web-core/lib/: gamepad.js  guacamole-keyboard-selkies.js  guacamole.js  input.js  signalling.js  util.js  webrtc.js
addons/gst-web/src/: app.js  gamepad.js  index.html  input.js  manifest.json  package-lock.json  package.json  signalling.js  sw.js  util.js  webrtc.js
addons/gst-web/src/css/: vuetify.css  vuetify.css.map
addons/gst-web/src/lib/: guacamole-keyboard-selkies.js  vuetify-1.5.24.min.js  webrtc-adapter-9.0.1.min.js
addons/gstreamer/: Dockerfile  Dockerfile.arm64  Dockerfile.debian  Dockerfile.ubuntu_debpkg  build_ubuntu_deb.sh  cloudbuild.yaml
addons/gstreamer/config/: gst-build-add-usrsctp.patch  gst-env  gstwebrtcbin-rtx-time.patch  usrsctp.wrap
addons/js-interposer/: .gitignore  Dockerfile.debian_debpkg  Dockerfile.debpkg  Dockerfile.ubuntu_debpkg  Makefile  README.md  build_deb.sh  build_debian.sh  build_ubuntu_deb.sh  example-button-mappings.txt  joystick_interposer.c  js-interposer-test.py  sdl-js-test.c
addons/js-interposer/dev/: Makefile  input-dir-interposer-test.c  input-dir-interposer.c  test-input-dir-interposer
addons/js-interposer/selkies-gamepad-rs/: Cargo.toml
addons/js-interposer/selkies-gamepad-rs/src/: main.rs
addons/turn-rest/: Dockerfile  app.py
dev/: build-gstreamer-debian12.sh  build-gstreamer-ubuntu1804.sh  build-gstreamer-ubuntu2004.sh  build-gstreamer-ubuntu2204.sh  build-gstreamer-ubuntu2404.sh  start-test-ubuntu1804.sh  start-test-ubuntu2004.sh  start-test-ubuntu2204.sh  start-test-ubuntu2404.sh
docs/: README.md  component.md  design.md  development.md  faq.md  firewall.md  index.md  mkdocs.yml  start.md  troubleshooting.md  usage.md
images/: cloudbuild.yaml
images/gst-base/: Dockerfile  Dockerfile.test  cloudbuild.yaml  setup.cfg
images/gst-base/src/selkies_gstreamer/: __init__.py  __main__.py  gstwebrtc_app.py  resize.py  webrtc_input.py  webrtc_signalling.py
images/gst-base/src/selkies_gstreamer_disla.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
images/gst-base/tests/: gst-python-test.py
images/gst-web/: Dockerfile  entrypoint.sh
images/gst-web/src/: .eslintrc.json  app.js  gamepad.js  index.html  input.js  manifest.json  package.json  signalling.js  sw.js
images/gst-web/src/css/: vuetify.css
images/gst-webrtc-app/: Dockerfile  cloudbuild.yaml  entrypoint.sh  record.sh
images/signaling/: Dockerfile
infra/gce/: cloudbuild.yaml
infra/gce/base/: cloudbuild.yaml  network.tf  outputs.tf  secret.tf  services.tf  versions.tf
infra/gce/installer-image/: Dockerfile  deploy.sh
infra/gce/turn-vm/: cloudbuild.yaml  locals.tf  outputs.tf  state.tf  turn.tf  variables.tf
infra/gce/turn-vm/turn-mig/: main.tf  variables.tf
infra/gce/turn-web/: cloudbuild.yaml  main.tf  outputs.tf  state.tf  variables.tf
infra/gcp/: cloudbuild.yaml
infra/gcp/base/: cloudbuild.yaml  iam.tf  outputs.tf  secret.tf  variables.tf  versions.tf
infra/gcp/installer-image/: Dockerfile
infra/gcp/turn-vm/: cloudbuild.yaml  network.tf  outputs.tf  turn.tf  variables.tf  versions.tf
infra/gcp/turn-vm/turn-mig/: outputs.tf  variables.tf
infra/gcp/turn-web/: cloudbuild.yaml  main.tf  outputs.tf  variables.tf  versions.tf
infra/gke/: .gitignore  COTURN_GKE.md  GKE_ASM_IAP.md  README.md
infra/gke/manifests/: kustomization.yaml
infra/gke/manifests/coturn/: .gitignore  README.md  coturn-deploy.yaml  coturn-discovery-service.yaml  coturn-gateway.yaml  coturn-hpa.yaml  coturn-lb-service.yaml  coturn-service.yaml  coturn-web-deploy.yaml  coturn-web-rbac.yaml  coturn-web-service.yaml  coturn-web-virtualservice.yaml  kustomization.yaml  namespace.yaml
infra/gke/manifests/coturn-vm/: .gitignore  README.md  coturn-discovery-service.yaml  coturn-gateway.yaml  coturn-web-deploy.yaml  coturn-web-rbac.yaml  coturn-web-service.yaml  coturn-web-virtualservice.yaml  kustomization.yaml  namespace.yaml
infra/gke/manifests/selkies-gstreamer/: kustomization.yaml  namespace.yaml  selkies-gstreamer-gateway.yaml  (+3 more)
src/selkies_gstreamer/: __init__.py  __main__.py  gamepad.py  gpu_monitor.py  gstwebrtc_app.py  input_event_codes.py  metrics.py  resize.py  signalling_web.py  system_monitor.py  utils.py  watch_test.py  webrtc_input.py  webrtc_signalling.py
static/: index.html
(+1 files in other folders)
