# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[metadata]
name = selkies-gstreamer
version = 0.0.1
author = Dan Isla
author_email = dan.isla@gmail.com
description = Selkies GStreamer app for Python
long_description =
    Selkies GStreamer is a WebRTC desktop streaming application for Python.
#long_description_content_type = text/markdown
url = https://github.com/selkies-project/selkies-gstreamer
project_urls =
    Bug Tracker = https://github.com/selkies-project/selkies-gstreamer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    websockets
    basicauth
    gputil
    prometheus_client
    msgpack
    pynput
    psutil
    watchdog
    Pillow
    python-uinput @ git+https://github.com/selkies-project/python-uinput.git@0.11.3
    python-xlib==0.31

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    selkies-gstreamer = selkies_gstreamer.__main__:main
    selkies-gstreamer-resize = selkies_gstreamer.resize:main
