# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[metadata]
name = selkies-gstreamer
version = 0.0.0
author = "Dan Isla, Seungmin Kim"
author_email = "danisla@users.noreply.github.com, 8457324+ehfd@users.noreply.github.com"
description = Open-Source Low-Latency Linux WebRTC HTML5 Remote Desktop and 3D Graphics / Game Streaming Platform with GStreamer
long_description =
    Open-Source Low-Latency Linux WebRTC HTML5 Remote Desktop and 3D Graphics / Game Streaming Platform with GStreamer
#long_description_content_type = text/markdown
url = https://github.com/selkies-project/selkies-gstreamer
project_urls =
    Bug Tracker = https://github.com/selkies-project/selkies-gstreamer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    websockets
    basicauth
    gputil
    prometheus_client
    msgpack
    pynput
    psutil
    watchdog
    Pillow
    python-xlib @ https://github.com/selkies-project/python-xlib/archive/master.zip

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    selkies-gstreamer = selkies_gstreamer.__main__:main
    selkies-gstreamer-resize = selkies_gstreamer.resize:main
