[metadata]
name = selkies-gstreamer-disla
version = 1.0.0-rc0
author = Dan Isla
author_email = dan.isla@gmail.com
description = Selkies GStreamer app for Python
long_description =
    Selkies GStreamer is a WebRTC desktop streaming application for Python.
#long_description_content_type = text/markdown
url = https://github.com/selkies-project/selkies-gstreamer
project_urls =
    Bug Tracker = https://github.com/selkies-project/selkies-gstreamer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    websockets
    xlib
    gputil
    python-uinput
    prometheus_client
    msgpack
    pynput
    psutil

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    selkies-gstreamer = selkies_gstreamer.__main__:main